# ForumForCompetitions

./: README.md  pyproject.toml
django_project/django_project/: settings.py
