[tool.poetry]
name = "petprojectdjango"
version = "0.1.0"
description = ""
authors = ["timkaoch <ochilov-timka@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
ruff = "^0.8.2"

[tool.ruff]
line-length = 79
indent-width = 4
exclude = [
    "migrations",
    "venv",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "EXE002", "RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

